<?xml version="1.0"?>
<package format="2">

  <name>liosam</name>
  <version>1.0.0</version>
  <description>Laser-inertial odometry by Tixiao Shan</description>

  <maintainer email="petrapa6@fel.cvut.cz">Pavel Petracek</maintainer>
  <author>Tixiao Shan (shant@mit.edu)</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nodelet</depend>
  <depend>tf</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>visualization_msgs</depend>


  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>mrs_lib</depend>
  <depend>GTSAM</depend>
  <depend>gtsam_playground</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
